# Maxi-Server-Linux

./: .gitignore  CMakeLists.txt  Maxi Viejo.session.sql  NoteCashboxLevelSettings_598485.json  README.md  ToDo.txt
include/: version.hpp.in
include/controller/: c_sharp_validator.hpp  compatibilidad.hpp  config.hpp  configuracion.hpp  log.hpp  main_window.hpp  nip.hpp  nuevo_nip.hpp  pago.hpp  pago_manual.hpp  refill.hpp  rest_api.hpp  session.hpp  validator.hpp  venta.hpp
include/controller/config/: empresa.hpp  general.hpp  impresora.hpp  info.hpp  print_operation.hpp  roles.hpp  terminal.hpp  validador.hpp  wifi.hpp
include/controller/venta/: dialmonto.hpp  efectivo.hpp  metodo_pago.hpp  tarjeta.hpp
include/core/: hub_cash.hpp
include/core/context/: validador.hpp
include/core/interfaces/: ivalidador.hpp
include/core/states/: svalidador.hpp
include/db/: coneccion.hpp
include/model/: configuracion.hpp  detalle_movimiento.hpp  level_cash.hpp  log.hpp  log_historial.hpp  pago_pendiente.hpp  pago_terminal.hpp  roles.hpp  terminales.hpp  usuario_historial.hpp  usuarios.hpp  usuarios_roles.hpp
include/shared/: global.hpp  version_comparator.hpp
include/view/: base.nip.hpp  base.venta_pago.hpp  carrousel.hpp  config.hpp  cortinilla_carga.hpp  main_window.hpp  metodo_pago.hpp  refill.hpp
include/view/config/: base.validador.hpp  empresa.hpp  general.hpp  impresora.hpp  info.hpp  roles.hpp  validador.hpp  wifi.hpp
lib/: Sqlit3-cpp-lib
lib/eSSP/: CMakeLists.txt
lib/eSSP/inc/: SSPComs.h  itl_types.h
lib/eSSP/lib/: Encryption.h  ITLSSPProc.c  Random.c  Random.h  SSPComs.c  defs.h  serialfunc.c  ssp_commands.c
src/: main.cpp
src/controller/: c_sharp_validator_validator.cpp  config.cpp  configuracion.cpp  log.cpp  main_window.cpp  nip.cpp  nuevo_nip.cpp  pago.cpp  pago_manual.cpp  refill.cpp  rest_api.cpp  session.cpp  validator.cpp  venta.cpp
src/controller/config/: empresa.cpp  general.cpp  impresora.cpp  info.cpp  print_operation.cpp  roles.cpp  terminal.cpp  validador.cpp  wifi.cpp
src/controller/venta/: dialmonto.cpp  efectivo.cpp  metodo_pago.cpp  tarjeta.cpp
src/core/: hub_cash.cpp
src/core/context/: validador.cpp
src/core/states/: svalidador.cpp
src/model/: configuracion.cpp  detalle_movimiento.cpp  level_cash.cpp  log.cpp  log_historial.cpp  pago_pendiente.cpp  pago_terminal.cpp  roles.cpp  terminales.cpp  usuario_historial.cpp  usuarios.cpp  usuarios_roles.cpp
src/shared/: global.cpp
src/view/: base.nip.cpp  base.venta_pago.cpp  carrousel.cpp  config.cpp  cortinilla_carga.cpp  main_window.cpp  metodo_pago.cpp  refill.cpp
src/view/base/: venta_pago.cpp
src/view/config/: base.validador.cpp  empresa.cpp  general.cpp  impresora.cpp  info.cpp  roles.cpp  validador.cpp  wifi.cpp
test/: CMakeLists.txt  test_main.cpp  test_validators.cpp
test/ui/: main.blp  main.ui  main_window.ui  metodo_pago.ui  nip.ui  refill.ui  settings
test/ui/base/: venta_pago.blp  venta_pago.ui
test/ui/conf/: empresa.ui  general.ui  home.ui  impresora.ui  info.ui  main.blp  main.ui  roles.ui  validadores.ui  wifi.ui
